tests/__snapshots__/validation-configFile-syntax-errors-option-name.snap.txt
Error: Expected option name.

  1 | {
  2 |   : true,
    |   ~
  3 |   "testFileMatch": ["examples/*.tst.*"
  4 | 

      at ./tstyche.config.json:2:3

